2006-02-09  Assaf Gordon  <agordon88@gmail.com>

	* src/gnome-cmd-data.c:
	* src/gnome-cmd-data.h:
	* src/gnome-cmd-file.c:
	* src/gnome-cmd-options-dialog.c:
	Added option for enabling/disabling 'Internal Viewer'

2006-02-08  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-internal-viewer.c:
	* src/utils.c:
        i18n

2006-02-08  Assaf Gordon  <agordon88@gmail.com>

	* src/Makefile.am:
	* src/gnome-cmd-file.c:
	* src/gnome-cmd-internal-viewer.c:
	* src/gnome-cmd-internal-viewer.h:
	* src/utils.c:
	Added internal F3 viewer

2006-02-08  Piotr Eljasiak  <epiotr@use.pl>

	* pixmaps/gnome-commander.{png,xpm}: new GNOME commander logo
	* pixmaps/gcmd-icon?.{png,xcf,xpm}: removed old icons

2006-02-05  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-delete-dialog.c:
	* src/gnome-cmd-file.c:
	* src/gnome-cmd-prepare-xfer-dialog.c:
	* src/gnome-cmd-xfer.c:
	* src/utils.c:
	* src/utils.h:
	Set default button to OK in 'Delete' dialog

2006-02-05  Assaf Gordon  <agordon88@gmail.com>

	* src/gnome-cmd-file.c:
	Fixed filename escaping

2006-02-03  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-main-menu.c:
	Fixed typo.

2006-02-03  Assaf Gordon  <agordon88@gmail.com>

	* src/gnome-cmd-file-selector.c:
	Added CTRL+SHIFT+. for copying the current working directory from the active file-list to the inactive one.

2006-02-02  Assaf Gordon  <agordon88@gmail.com>

	* src/gnome-cmd-file-list.c:
	Added new keybindings for SelectAll/UnselectAll and SelectPatternDialog (for notebook users)

	* src/gnome-cmd-file-selector.c:
	FAMD - do not monitor the last visited dir

	* src/gnome-cmd-quicksearch-popup.c:
	Fixed CTRL+ALT+letter not responding when typed too fast

2006-02-02  Piotr Eljasiak  <epiotr@use.pl>

	Updated copyright info.

2005-09-07  Inaki Larranaga  <dooteo@euskalgnu.org>

	* configure.in: Added "eu" to ALL_LINGUAS.

2005-09-02  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-lexer.l:
	Reworked (and simplified) internal representation for fname templates.