@@ -1,0 +1,37 @@
+/* XPM */
+static char * flip_horizontal_16_xpm[] = {
+"16 16 18 1",
+" 	c None",
+".	c #2A2A2A",
+"+	c #000000",
+"@	c #C4D4E4",
+"#	c #9DB8D2",
+"$	c #C2D2E3",
+"%	c #C1D2E2",
+"&	c #CAD9E5",
+"*	c #BAC6D3",
+"=	c #7A8C9A",
+"-	c #88A0B6",
+";	c #8FA8BF",
+">	c #91A8BE",
+",	c #768B9F",
+"'	c #758A9D",
+")	c #060709",
+"!	c #7C92A6",
+"~	c #7A8FA6",
+"                ",
+"                ",
+"                ",
+"     .+  +.     ",
+"    +@+  +#+    ",
+"   +$#++++##+   ",
+"  +$##%&&%###+  ",
+" +*##########=+ ",
+"  +-##;>>;##,+  ",
+"   +-;++++#')   ",
+"    +!+  +~+    ",
+"     ++  ++     ",
+"                ",
+"                ",
+"                ",
+"                "};
