@@ -1,0 +1,40 @@
+/* XPM */
+static char * flip_vertical_16_xpm[] = {
+"16 16 21 1",
+" 	c None",
+".	c #000000",
+"+	c #C7D6E5",
+"@	c #9DB8D2",
+"#	c #8FA8BF",
+"$	c #2A2A2A",
+"%	c #C9D7E5",
+"&	c #9EB8D2",
+"*	c #A3BCD4",
+"=	c #92A9BF",
+"-	c #C4D4E4",
+";	c #879FB5",
+">	c #C3D3E3",
+",	c #8EA3B7",
+"'	c #D2DEEA",
+")	c #D4E0EB",
+"!	c #C2D3E3",
+"~	c #C0D2E1",
+"{	c #C9D8E5",
+"]	c #96B0C8",
+"^	c #88A0B6",
+"                ",
+"       .        ",
+"      .+.       ",
+"     .+@#.      ",
+"    .+@@@#.     ",
+"   $%&*@@&=.    ",
+"   ...-@;...    ",
+"     .>@,.      ",
+"     .>@,.      ",
+"   ...-@;...    ",
+"   $')!@#~{.    ",
+"    .]@@@#.     ",
+"     .#@#.      ",
+"      .^.       ",
+"       .        ",
+"                "};
