@@ -1,0 +1,61 @@
+/* XPM */
+static char * rotate_180_16_xpm[] = {
+"16 16 42 1",
+" 	c None",
+".	c #000000",
+"+	c #C8D7E5",
+"@	c #C7D6E5",
+"#	c #C0CEDA",
+"$	c #A8ADB2",
+"%	c #272727",
+"&	c #C4D4E4",
+"*	c #9DB8D2",
+"=	c #A3BCD5",
+"-	c #A2BBD3",
+";	c #8FA4B6",
+">	c #303030",
+",	c #A4BDD5",
+"'	c #9FB9D3",
+")	c #A0BAD3",
+"!	c #83919F",
+"~	c #96A3B0",
+"{	c #B1C7DB",
+"]	c #A2BCD4",
+"^	c #97AEC6",
+"/	c #2A2A2A",
+"(	c #C3D3E3",
+"_	c #A1BBD2",
+":	c #C5D4E4",
+"<	c #9FB9D2",
+"[	c #C2D2E3",
+"}	c #ABB5BF",
+"|	c #CCDAE7",
+"1	c #A0BBD3",
+"2	c #95ADC5",
+"3	c #C1D2E2",
+"4	c #CAD9E5",
+"5	c #CCD9E6",
+"6	c #AAC1D8",
+"7	c #7A8794",
+"8	c #CCD9E7",
+"9	c #8EA2B4",
+"0	c #9FB9D1",
+"a	c #9AB2C8",
+"b	c #88919B",
+"c	c #3C4146",
+"    ......      ",
+"    .+@+#$%     ",
+"    .&**=-;>    ",
+"    .&**,')!.   ",
+"    ....~{]^.   ",
+"     /. .(*_.   ",
+"    .&. .:*<.   ",
+"   .[*..}|12.   ",
+"  .[**3456<7.   ",
+" .8*****=-9>    ",
+"  .****0abc.    ",
+"   .**....      ",
+"    .*.         ",
+"     ..         ",
+"                ",
+"                "};
