@@ -1,0 +1,43 @@
+/* XPM */
+static char * rotate_270_16_xpm[] = {
+"16 16 24 1",
+" 	c None",
+".	c #000000",
+"+	c #010101",
+"@	c #424242",
+"#	c #C1C3C8",
+"$	c #CDDAE4",
+"%	c #B4C8DC",
+"&	c #9DB8D2",
+"*	c #4D4D4D",
+"=	c #D7E0E9",
+"-	c #B3C8DA",
+";	c #A4BCD4",
+">	c #C8CCD2",
+",	c #B6CADC",
+"'	c #A5BDD5",
+")	c #AFC5DA",
+"!	c #C8D7E4",
+"~	c #A9C1D7",
+"{	c #8896A3",
+"]	c #BACDDF",
+"^	c #C7D6E5",
+"/	c #B7CADE",
+"(	c #D5E1EC",
+"_	c #D9E3ED",
+"                ",
+"                ",
+"        ..+...  ",
+"       @#$%&&.  ",
+"      *=-;&&&.  ",
+"      >,')&&&.  ",
+"     .!~&{....  ",
+"     .]&&.      ",
+"   ...^&&...    ",
+"   ./(_&&&&.    ",
+"    .&&&&&.     ",
+"     .&&&.      ",
+"      .&.       ",
+"       .        ",
+"                ",
+"                "};
