@@ -1,0 +1,48 @@
+/* XPM */
+static char * rotate_90_16_xpm[] = {
+"16 16 29 1",
+" 	c None",
+".	c #000000",
+"+	c #C8D7E5",
+"@	c #C7D6E5",
+"#	c #C9D7E5",
+"$	c #CAD8E5",
+"%	c #BDC3C8",
+"&	c #282828",
+"*	c #C4D4E4",
+"=	c #9DB8D2",
+"-	c #A3BCD5",
+";	c #A2BBD3",
+">	c #91A5B8",
+",	c #313131",
+"'	c #A4BDD5",
+")	c #9FB9D3",
+"!	c #9FB9D2",
+"~	c #8D9CAA",
+"{	c #94A1AD",
+"]	c #B1C7DB",
+"^	c #A2BCD4",
+"/	c #9FB7CE",
+"(	c #C3D3E3",
+"_	c #A7BED4",
+":	c #9CB7D1",
+"<	c #2A2A2A",
+"[	c #D4E0EB",
+"}	c #C2D3E3",
+"|	c #C1D2E2",
+"                ",
+"                ",
+"  ......        ",
+"  .+@#$%&       ",
+"  .*==-;>,      ",
+"  .*==')!~.     ",
+"  ....{]^/.     ",
+"      .(=_.     ",
+"    ...*=:...   ",
+"    <*[}==]|.   ",
+"     .=====.    ",
+"      .===..    ",
+"       .=..     ",
+"        .       ",
+"                ",
+"                "};
