@@ -1,3 +1,9 @@
+2006-02-11  Assaf Gordon  <agordon88@gmail.com>
+
+	* pixmap/{flip,rotate}-*.xpm:
+	* src/gnome-cmd-internal-viewer.c:
+	Made internal viewer menu consistent with 'Eye of GNOME'
+
 2006-02-09  Assaf Gordon  <agordon88@gmail.com>
 
 	* src/gnome-cmd-data.c:
